# omc

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEVLOG.md  README.md  docker-compose.prod.yml  docker-compose.yml
.sqlx/: query-068604892cb87290505f8f78845bdc81d9e82319f0ada232f171300633b718fa.json  query-0a24797390d0ed9db10a1a45722e785940145d0ded7bf7af1a281371afb05442.json  query-0f6825de0eb27f73882fe50385140e44245f436db314fcb0b9fe80a581886bb8.json  query-1499d122648d9b8d8e9e8d23edf73ac49d8e7e3556df662b5ebe727c9b5fe1b4.json  query-2b8085472c55f72e8be5d996dbf5a00d13bec4915dca107d89d50c436c1fe42b.json  query-3c24b398b634eba4b3bf19aff60458cd22df892114971a33d6875f8661c2144f.json  query-454ef006a74d142d092887f73e9a7439d145346270e24b88072324151460d73f.json  query-47397a7af893369f1e733920a1cb4d6e5c2c88544f427b0463eb9b51529087cf.json  query-4edb4b613d9ed768541ee176f028788ce7981f7b7596a19f695681957332c0c9.json  query-527a3c9fd65f344c8e2e934c702e4116962cf6bfcd3535f7d89910ef97d47d6d.json  query-5503d7b0823faec84e9a2818fedf1e3b2ac7f31f6a52f26b0338d3cdc7d32f50.json  query-69b2eb292bc0c414908885d2882ae27bfbd84432ce184141d442c9c1773ab24c.json  query-76d071c281d1b026fdc2c4d23075f2577448595058bb7c9cf6bcb89db6cef288.json  query-77efc5e658251c2b4aa0df94e3d1575dda7a86f2ac9e85da3c699980aa798f2f.json  query-89f685b4fc7a198f04a3b0161e63dff47cf8dc45e284839bba3e1b3f294c6db2.json  query-8f7cc8b0df71c3b19bf16a436a5fb4027f71ddd41aecb2397d6b72c53449d62c.json  query-8fa43d3c8e24b00283a6cd8eac1885660b7284f0274efbd420ca2ef6e4863bb8.json  query-94a12621ddb012605b1269faef42934e90c3c4c19581667f83418d2b6aca7e9d.json  query-a25ff7d222ec47e52998e8e4495b5749d80d48de60c448af02146021b22c0051.json  query-a3da08bbfd419f02c0790cc3b9f59eeca303082ff148c3c32b337b95737406ce.json  query-a9eb6cda2e6d53ba9bd3db78e08b0fe63fe50fba3a112d5148d4024ea703219a.json  query-ab3f4ad4804e44fe9ea3b0452e4eb14cdf149d13f722fe8400209ec67312c531.json  query-ab49a0e07bd377ec787f4db4849e644851a45835a54e1f1f2a0510517b4f9600.json  query-adbd858a6aa2e6176c35ac1509d236d0e05ad876109ab4689cf157184f8f23fa.json  query-b691b6e90271d24d02faa599571f150f6baff0a5f31c51f28a7fad76cbd42447.json  query-bb714e9eabd122f4eb736d4b7232378902f530db388e0b8f2c763897f5b22a23.json  query-bc296908ff153548e69b70ab4da323639445038ba879b4df2331a86818eb7066.json  query-c7187f32afe4a6da9623108729ccb4c1d588529e0cc9cfb51b4f4e1acf24c81b.json  query-cd9a7c5e1a160d023acdd8417b163f47cea0c3fb8fbd420a91c629a50b74db87.json  query-db5fc162101eeb72bd9cded886c43371c0f87c256b4b7a689a69e07ba6a6cae4.json  (+2 more)
backend/: Cargo.toml  Dockerfile  build.rs
backend/config/: base.toml  production.toml
backend/migrations/: 0001_init.sql  0002_mission_dates.sql  0003_timescaledb.sql  0004_compression.sql  0005_rbac_refresh_tokens.sql  0006_audit_logs.sql
backend/src/: db.rs  main.rs  metrics.rs  observability.rs  openapi.rs  resilience.rs  settings.rs
backend/src/audit/: mod.rs  models.rs  repository.rs
backend/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  secret.rs
backend/src/health/: checks.rs  mod.rs
backend/src/missions/: handlers.rs  models.rs
backend/src/telemetry/: grpc.rs  handlers.rs  mod.rs  models.rs  repository.rs
backend/src/websockets/: handler.rs
backend/tests/: e2e_pipeline.rs
docs/: CASE_STUDY.md  DEMO.md  _config.yml  index.md
simulator/: Cargo.toml  Dockerfile
simulator/src/: config.rs  main.rs  physics.rs
simulator/src/communication/: channel.rs
simulator/src/physics/: mod.rs  orbital.rs  power.rs  thermal.rs
(+24 files in other folders)
