[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid"
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
redis = { version = "0.26.0", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"
serde_json = "1.0"
argon2 = "0.5"
jsonwebtoken = "9.3"
async-nats = "0.35"
prometheus = { version = "0.13", features = ["process"] }
tower-http = { version = "0.5", features = ["cors"] }
tonic = "0.12"
prost = "0.13"
config = "0.14"

[build-dependencies]
tonic-build = "0.12"
