[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["json"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
redis = { version = "0.26.0", features = ["tokio-comp"] }
futures-util = "0.3"
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
